apps/automata/overlays/nishir-tailnet/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: automata
  annotations:
    tailscale.com/hostname: automata
    tailscale.com/tags: tag:automata
spec:
  loadBalancerClass: tailscale
