apps/automata/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: automata
  namespace: shikanime
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: ssh
        - port: mdns
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
      ports:
        - port: a2a
        - port: api-server
        - port: dashboard
        - port: webhook
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: automata
      app.kubernetes.io/name: automata
  policyTypes:
    - Ingress
